# amazix

./: LICENSE  opcode-cpm-checklist.md  pyproject.toml
scripts/: test.py
src/z80pie/: Z80.py
